--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3,6 +3,42 @@
 @import url(https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css);
 @import url(https://fonts.googleapis.com/css?family=Poppins:400,500,600&display=swap);
 @charset "UTF-8";
+/*Facebook*/
+.btn-facebook {
+  color: #fff !important;
+  background: #39579b;
+}
+
+/*VK*/
+.btn-vk {
+  color: #fff !important;
+  background: #2787f5;
+}
+
+/*Telegram*/
+.btn-telegram {
+  color: #fff !important;
+  background: #23a2df;
+}
+
+/*Twitter*/
+.btn-twitter {
+  color: #fff !important;
+  background: #55acee;
+}
+
+/*Google*/
+.btn-google {
+  color: #fff !important;
+  background: #dd4b39;
+}
+
+/*Yandex*/
+.btn-yandex {
+  color: #fff !important;
+  background: #fc3f1d;
+}
+
 body {
   font-family: "Poppins", sans-serif;
   font-size: 15px;
