--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,6 +10,8 @@
 
 @import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600&display=swap");
 
+@import "social-icon";
+
 body {
     font-family: "Poppins",sans-serif;
     font-size: 15px;
