--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,6 +11,7 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600&display=swap");
 
 @import "social-icon";
+@import "stories";
 
 body {
     font-family: "Poppins",sans-serif;
