--- a/resources/sass/_stories.scss
+++ b/resources/sass/_stories.scss
@@ -12,6 +12,7 @@
 
 .story-block {
   .splide__slide {
+    width: 100px!important;
     padding-top: 5px;
     padding-bottom: 5px;
     padding-right: 26px !important;
