commit 8: UserFriendsTree, News, UserStatistic, Modals

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -13,6 +13,8 @@
 @import "social-icon";
 @import "stories";
 
+@import "users-friends-tree";
+
 body {
     font-family: "Poppins",sans-serif;
     font-size: 15px;
