--- a/public/css/app.css
+++ b/public/css/app.css
@@ -233,6 +233,29 @@ body.dark-mode-active .story-block .seen img, body.dark-mode-active .story-block
   box-shadow: 0 0 0 4px #0F1C2F, 0 0 0 5px rgba(88, 109, 127, 0.5);
 }
 
+#UsersFriendsTree {
+  font-family: "Avenir", Helvetica, Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-align: center;
+  color: #2c3e50;
+  margin-top: 60px;
+}
+#UsersFriendsTree .extend_handle:before {
+  border: 4px solid;
+  border-color: #ccc #ccc transparent transparent;
+}
+#UsersFriendsTree .avat {
+  border-radius: 2em;
+  border-width: 2px;
+}
+#UsersFriendsTree .name {
+  font-weight: 700;
+}
+#UsersFriendsTree .rootNode .name {
+  color: red;
+}
+
 body {
   font-family: "Poppins", sans-serif;
   font-size: 15px;
