--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3045,7 +3045,7 @@ textarea, .form-control {
   text-align: center;
   border-radius: 10px !important;
   border: 1px solid #DCDCE9 !important;
-  width: 180px !important;
+  width: 50% !important;
   padding: 0 10px !important;
   margin: auto;
   min-height: 70px !important;
@@ -5658,6 +5658,7 @@ body.dark-mode-active .story-block .seen img, body.dark-mode-active .story-block
 }
 
 #UsersFriendsTree {
+  overflow: scroll;
   font-family: "Avenir", Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
