--- a/resources/sass/_main-styles.scss
+++ b/resources/sass/_main-styles.scss
@@ -3482,7 +3482,7 @@ textarea, .form-control {
     text-align: center;
     border-radius: 10px !important;
     border: 1px solid #DCDCE9 !important;
-    width: 180px !important;
+    width: 50% !important;
     padding: 0 10px !important;
     margin: auto;
     min-height: 70px !important;
