commit 46: notification from browser about debiting cashback

--- a/resources/sass/_main-styles.scss
+++ b/resources/sass/_main-styles.scss
@@ -39,7 +39,7 @@ a {
     left: 0;
     right: 0;
     z-index: 999;
-    background: #FFFFFF;
+    background-color: #EDEDF5;
     color: #27173E;
     border-bottom: 1px solid #DCDCE9;
 
@@ -4321,7 +4321,7 @@ textarea, .form-control {
     right: 0;
     width: 100%;
     padding: 0 16px;
-    background: #FFF;
+    background: #EDEDF5;
     min-height: 84px;
     padding-bottom: env(safe-area-inset-bottom);
 
