--- a/public/css/app.css
+++ b/public/css/app.css
@@ -45,7 +45,7 @@ a:hover, a:active, a:focus {
   left: 0;
   right: 0;
   z-index: 999;
-  background: #FFFFFF;
+  background-color: #EDEDF5;
   color: #27173E;
   border-bottom: 1px solid #DCDCE9;
 }
@@ -3792,7 +3792,7 @@ textarea, .form-control {
   right: 0;
   width: 100%;
   padding: 0 16px;
-  background: #FFF;
+  background: #EDEDF5;
   min-height: 84px;
   padding-bottom: env(safe-area-inset-bottom);
 }
