--- a/resources/sass/_main-styles.scss
+++ b/resources/sass/_main-styles.scss
@@ -5052,6 +5052,15 @@ textarea, .form-control {
     }
 }
 
+@media (max-width: 480px) {
+    .stat-box {
+        padding: 20px 18px;
+    }
+    .stat-box .value {
+        font-size: 16px;
+    }
+}
+
 .transactions .item {
     background: #ffffff;
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.09);
@@ -5466,9 +5475,14 @@ textarea, .form-control {
         }
     }
 }
-
+.categories-block .splide__slide {
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-right: 26px !important;
+    margin-right: -10px !important;
+}
 body.dark-mode {
-    background: #030108;
+    background: #0c051c;
     color: #8f82a5;
 
     &.bg-white {
@@ -6401,4 +6415,10 @@ body.dark-mode {
             color: #fff;
         }
     }
+}
+
+
+.pl-6px {
+    padding-left: 6px;
+    padding-right: 0;
 }
