commit 53: translete vue components

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8,8 +8,8 @@
 /* MaterialDesignIcons.com */
 @font-face {
   font-family: "Material Design Icons";
-  src: url(/fonts/vendor/@mdi/materialdesignicons-webfont.eot?837327a8a567a822c61b7104f07c2d83);
-  src: url(/fonts/vendor/@mdi/materialdesignicons-webfont.eot?837327a8a567a822c61b7104f07c2d83) format("embedded-opentype"), url(/fonts/vendor/@mdi/materialdesignicons-webfont.woff2?936ae4735c5d59fdc4198d12d7d6c344) format("woff2"), url(/fonts/vendor/@mdi/materialdesignicons-webfont.woff?ccfe5ae5a70745b64548c9935a76e94d) format("woff"), url(/fonts/vendor/@mdi/materialdesignicons-webfont.ttf?ac8d50b69f5cdb3c27bbcc4c6c3b3bc9) format("truetype");
+  src: url(/fonts/vendor/@mdi/materialdesignicons-webfont.eot?48bd9886ff72516520942a1e9ecf41dc);
+  src: url(/fonts/vendor/@mdi/materialdesignicons-webfont.eot?48bd9886ff72516520942a1e9ecf41dc?#iefix&v=6.4.95) format("embedded-opentype"), url(/fonts/vendor/@mdi/materialdesignicons-webfont.woff2?0fd34b1e71eac5b2ebb36d423cff76a7) format("woff2"), url(/fonts/vendor/@mdi/materialdesignicons-webfont.woff?b4281c223f1d6908458ddd27262a2a5a) format("woff"), url(/fonts/vendor/@mdi/materialdesignicons-webfont.ttf?9b70b51e40527d726b4f3f8949ac30a0) format("truetype");
   font-weight: normal;
   font-style: normal;
 }
@@ -448,6 +448,14 @@
   content: "\F04CB";
 }
 
+.mdi-account-sync::before {
+  content: "\F191B";
+}
+
+.mdi-account-sync-outline::before {
+  content: "\F191C";
+}
+
 .mdi-account-tie::before {
   content: "\F0CE3";
 }
@@ -498,6 +506,14 @@
 
 .mdi-adjust::before {
   content: "\F001A";
+}
+
+.mdi-advertisements::before {
+  content: "\F192A";
+}
+
+.mdi-advertisements-off::before {
+  content: "\F192B";
 }
 
 .mdi-air-conditioner::before {
@@ -4500,6 +4516,10 @@
   content: "\F079E";
 }
 
+.mdi-bus-electric::before {
+  content: "\F191D";
+}
+
 .mdi-bus-marker::before {
   content: "\F1212";
 }
@@ -5012,8 +5032,16 @@
   content: "\F0C48";
 }
 
+.mdi-car-brake-fluid-level::before {
+  content: "\F1909";
+}
+
 .mdi-car-brake-hold::before {
   content: "\F0D5E";
+}
+
+.mdi-car-brake-low-pressure::before {
+  content: "\F190A";
 }
 
 .mdi-car-brake-parking::before {
@@ -5022,6 +5050,14 @@
 
 .mdi-car-brake-retarder::before {
   content: "\F1017";
+}
+
+.mdi-car-brake-temperature::before {
+  content: "\F190B";
+}
+
+.mdi-car-brake-worn-linings::before {
+  content: "\F190C";
 }
 
 .mdi-car-child-seat::before {
@@ -5104,6 +5140,10 @@
   content: "\F152D";
 }
 
+.mdi-car-light-alert::before {
+  content: "\F190D";
+}
+
 .mdi-car-light-dimmed::before {
   content: "\F0C4A";
 }
@@ -5166,6 +5206,10 @@
 
 .mdi-car-side::before {
   content: "\F07AB";
+}
+
+.mdi-car-speed-limiter::before {
+  content: "\F190E";
 }
 
 .mdi-car-sports::before {
@@ -5876,6 +5920,10 @@
   content: "\F0E94";
 }
 
+.mdi-chart-waterfall::before {
+  content: "\F1918";
+}
+
 .mdi-chat::before {
   content: "\F0B79";
 }
@@ -6042,6 +6090,10 @@
 
 .mdi-checkbox-marked-circle-outline::before {
   content: "\F0134";
+}
+
+.mdi-checkbox-marked-circle-plus-outline::before {
+  content: "\F1927";
 }
 
 .mdi-checkbox-marked-outline::before {
@@ -7076,6 +7128,14 @@
   content: "\F109F";
 }
 
+.mdi-coffee-maker-check::before {
+  content: "\F1931";
+}
+
+.mdi-coffee-maker-check-outline::before {
+  content: "\F1932";
+}
+
 .mdi-coffee-maker-outline::before {
   content: "\F181B";
 }
@@ -7132,12 +7192,36 @@
   content: "\F08BB";
 }
 
+.mdi-cog-pause::before {
+  content: "\F1933";
+}
+
+.mdi-cog-pause-outline::before {
+  content: "\F1934";
+}
+
+.mdi-cog-play::before {
+  content: "\F1935";
+}
+
+.mdi-cog-play-outline::before {
+  content: "\F1936";
+}
+
 .mdi-cog-refresh::before {
   content: "\F145E";
 }
 
 .mdi-cog-refresh-outline::before {
   content: "\F145F";
+}
+
+.mdi-cog-stop::before {
+  content: "\F1937";
+}
+
+.mdi-cog-stop-outline::before {
+  content: "\F1938";
 }
 
 .mdi-cog-sync::before {
@@ -7398,6 +7482,14 @@
 
 .mdi-compass-rose::before {
   content: "\F1382";
+}
+
+.mdi-cone::before {
+  content: "\F194C";
+}
+
+.mdi-cone-off::before {
+  content: "\F194D";
 }
 
 .mdi-connection::before {
@@ -7672,6 +7764,10 @@
   content: "\F03C8";
 }
 
+.mdi-copyleft::before {
+  content: "\F1939";
+}
+
 .mdi-copyright::before {
   content: "\F05E6";
 }
@@ -7708,6 +7804,10 @@
   content: "\F019A";
 }
 
+.mdi-cow-off::before {
+  content: "\F18FC";
+}
+
 .mdi-cpu-32-bit::before {
   content: "\F0EDF";
 }
@@ -7740,6 +7840,14 @@
   content: "\F13D1";
 }
 
+.mdi-credit-card-chip::before {
+  content: "\F190F";
+}
+
+.mdi-credit-card-chip-outline::before {
+  content: "\F1910";
+}
+
 .mdi-credit-card-clock::before {
   content: "\F0EE1";
 }
@@ -7754,6 +7862,14 @@
 
 .mdi-credit-card-edit-outline::before {
   content: "\F17D8";
+}
+
+.mdi-credit-card-fast::before {
+  content: "\F1911";
+}
+
+.mdi-credit-card-fast-outline::before {
+  content: "\F1912";
 }
 
 .mdi-credit-card-lock::before {
@@ -8172,6 +8288,14 @@
   content: "\F1847";
 }
 
+.mdi-cylinder::before {
+  content: "\F194E";
+}
+
+.mdi-cylinder-off::before {
+  content: "\F194F";
+}
+
 .mdi-dance-ballroom::before {
   content: "\F15FB";
 }
@@ -8286,6 +8410,22 @@
 
 .mdi-database-export-outline::before {
   content: "\F162C";
+}
+
+.mdi-database-eye::before {
+  content: "\F191F";
+}
+
+.mdi-database-eye-off::before {
+  content: "\F1920";
+}
+
+.mdi-database-eye-off-outline::before {
+  content: "\F1921";
+}
+
+.mdi-database-eye-outline::before {
+  content: "\F1922";
 }
 
 .mdi-database-import::before {
@@ -9400,6 +9540,14 @@
   content: "\F1662";
 }
 
+.mdi-email-seal::before {
+  content: "\F195B";
+}
+
+.mdi-email-seal-outline::before {
+  content: "\F195C";
+}
+
 .mdi-email-search::before {
   content: "\F0961";
 }
@@ -9752,6 +9900,22 @@
   content: "\F0208";
 }
 
+.mdi-eye-arrow-left::before {
+  content: "\F18FD";
+}
+
+.mdi-eye-arrow-left-outline::before {
+  content: "\F18FE";
+}
+
+.mdi-eye-arrow-right::before {
+  content: "\F18FF";
+}
+
+.mdi-eye-arrow-right-outline::before {
+  content: "\F1900";
+}
+
 .mdi-eye-check::before {
   content: "\F0D04";
 }
@@ -9970,6 +10134,10 @@
 
 .mdi-fast-forward-10::before {
   content: "\F0D71";
+}
+
+.mdi-fast-forward-15::before {
+  content: "\F193A";
 }
 
 .mdi-fast-forward-30::before {
@@ -10236,8 +10404,32 @@
   content: "\F1773";
 }
 
+.mdi-file-image-minus::before {
+  content: "\F193B";
+}
+
+.mdi-file-image-minus-outline::before {
+  content: "\F193C";
+}
+
 .mdi-file-image-outline::before {
   content: "\F0EB0";
+}
+
+.mdi-file-image-plus::before {
+  content: "\F193D";
+}
+
+.mdi-file-image-plus-outline::before {
+  content: "\F193E";
+}
+
+.mdi-file-image-remove::before {
+  content: "\F193F";
+}
+
+.mdi-file-image-remove-outline::before {
+  content: "\F1940";
 }
 
 .mdi-file-import::before {
@@ -11380,6 +11572,14 @@
   content: "\F05F3";
 }
 
+.mdi-food-off-outline::before {
+  content: "\F1915";
+}
+
+.mdi-food-outline::before {
+  content: "\F1916";
+}
+
 .mdi-food-steak::before {
   content: "\F146A";
 }
@@ -11632,6 +11832,10 @@
   content: "\F0FB9";
 }
 
+.mdi-format-letter-spacing::before {
+  content: "\F1956";
+}
+
 .mdi-format-letter-starts-with::before {
   content: "\F0FBA";
 }
@@ -11694,6 +11898,10 @@
 
 .mdi-format-page-break::before {
   content: "\F06D7";
+}
+
+.mdi-format-page-split::before {
+  content: "\F1917";
 }
 
 .mdi-format-paint::before {
@@ -11886,6 +12094,10 @@
 
 .mdi-freebsd::before {
   content: "\F08E0";
+}
+
+.mdi-french-fries::before {
+  content: "\F1957";
 }
 
 .mdi-frequently-asked-questions::before {
@@ -12086,6 +12298,10 @@
 
 .mdi-gamepad-left::before {
   content: "\F0E3A";
+}
+
+.mdi-gamepad-outline::before {
+  content: "\F1919";
 }
 
 .mdi-gamepad-right::before {
@@ -12828,6 +13044,10 @@
   content: "\F182D";
 }
 
+.mdi-hand-clap::before {
+  content: "\F194B";
+}
+
 .mdi-hand-coin::before {
   content: "\F188F";
 }
@@ -13376,6 +13596,14 @@
   content: "\F07D1";
 }
 
+.mdi-home-battery::before {
+  content: "\F1901";
+}
+
+.mdi-home-battery-outline::before {
+  content: "\F1902";
+}
+
 .mdi-home-circle::before {
   content: "\F07D2";
 }
@@ -13462,6 +13690,14 @@
 
 .mdi-home-lightbulb-outline::before {
   content: "\F1252";
+}
+
+.mdi-home-lightning-bolt::before {
+  content: "\F1903";
+}
+
+.mdi-home-lightning-bolt-outline::before {
+  content: "\F1904";
 }
 
 .mdi-home-lock::before {
@@ -14066,6 +14302,10 @@
 
 .mdi-instrument-triangle::before {
   content: "\F104E";
+}
+
+.mdi-integrated-circuit-chip::before {
+  content: "\F1913";
 }
 
 .mdi-invert-colors::before {
@@ -14676,6 +14916,14 @@
   content: "\F032A";
 }
 
+.mdi-leaf-circle::before {
+  content: "\F1905";
+}
+
+.mdi-leaf-circle-outline::before {
+  content: "\F1906";
+}
+
 .mdi-leaf-maple::before {
   content: "\F0C93";
 }
@@ -14966,6 +15214,10 @@
 
 .mdi-liquid-spot::before {
   content: "\F1826";
+}
+
+.mdi-liquor::before {
+  content: "\F191E";
 }
 
 .mdi-list-status::before {
@@ -15650,6 +15902,14 @@
 
 .mdi-message-arrow-right-outline::before {
   content: "\F12F5";
+}
+
+.mdi-message-badge::before {
+  content: "\F1941";
+}
+
+.mdi-message-badge-outline::before {
+  content: "\F1942";
 }
 
 .mdi-message-bookmark::before {
@@ -16828,6 +17088,10 @@
   content: "\F08FB";
 }
 
+.mdi-network-strength-4-cog::before {
+  content: "\F191A";
+}
+
 .mdi-network-strength-off::before {
   content: "\F08FC";
 }
@@ -16848,12 +17112,20 @@
   content: "\F0395";
 }
 
+.mdi-newspaper-check::before {
+  content: "\F1943";
+}
+
 .mdi-newspaper-minus::before {
   content: "\F0F0C";
 }
 
 .mdi-newspaper-plus::before {
   content: "\F0F0D";
+}
+
+.mdi-newspaper-remove::before {
+  content: "\F1944";
 }
 
 .mdi-newspaper-variant::before {
@@ -17480,6 +17752,14 @@
   content: "\F0775";
 }
 
+.mdi-octahedron::before {
+  content: "\F1950";
+}
+
+.mdi-octahedron-off::before {
+  content: "\F1951";
+}
+
 .mdi-odnoklassniki::before {
   content: "\F03C5";
 }
@@ -17490,6 +17770,14 @@
 
 .mdi-office-building::before {
   content: "\F0991";
+}
+
+.mdi-office-building-cog::before {
+  content: "\F1949";
+}
+
+.mdi-office-building-cog-outline::before {
+  content: "\F194A";
 }
 
 .mdi-office-building-marker::before {
@@ -17756,6 +18044,10 @@
   content: "\F135C";
 }
 
+.mdi-palette-swatch-variant::before {
+  content: "\F195A";
+}
+
 .mdi-palm-tree::before {
   content: "\F1055";
 }
@@ -17821,14 +18113,26 @@
 }
 
 .mdi-panorama-horizontal::before {
+  content: "\F1928";
+}
+
+.mdi-panorama-horizontal-outline::before {
   content: "\F03DE";
 }
 
 .mdi-panorama-vertical::before {
+  content: "\F1929";
+}
+
+.mdi-panorama-vertical-outline::before {
   content: "\F03DF";
 }
 
 .mdi-panorama-wide-angle::before {
+  content: "\F195F";
+}
+
+.mdi-panorama-wide-angle-outline::before {
   content: "\F03E0";
 }
 
@@ -19000,6 +19304,10 @@
   content: "\F06A7";
 }
 
+.mdi-publish-off::before {
+  content: "\F1945";
+}
+
 .mdi-pulse::before {
   content: "\F0430";
 }
@@ -19082,6 +19390,14 @@
 
 .mdi-puzzle-star-outline::before {
   content: "\F14DB";
+}
+
+.mdi-pyramid::before {
+  content: "\F1952";
+}
+
+.mdi-pyramid-off::before {
+  content: "\F1953";
 }
 
 .mdi-qi::before {
@@ -19648,6 +19964,10 @@
   content: "\F0D2A";
 }
 
+.mdi-rewind-15::before {
+  content: "\F1946";
+}
+
 .mdi-rewind-30::before {
   content: "\F0D96";
 }
@@ -20110,6 +20430,14 @@
 
 .mdi-scatter-plot-outline::before {
   content: "\F0ECA";
+}
+
+.mdi-scent::before {
+  content: "\F1958";
+}
+
+.mdi-scent-off::before {
+  content: "\F1959";
 }
 
 .mdi-school::before {
@@ -21336,6 +21664,14 @@
   content: "\F0392";
 }
 
+.mdi-smoke-detector-alert::before {
+  content: "\F192E";
+}
+
+.mdi-smoke-detector-alert-outline::before {
+  content: "\F192F";
+}
+
 .mdi-smoke-detector-off::before {
   content: "\F1809";
 }
@@ -21350,6 +21686,10 @@
 
 .mdi-smoke-detector-variant::before {
   content: "\F180B";
+}
+
+.mdi-smoke-detector-variant-alert::before {
+  content: "\F1930";
 }
 
 .mdi-smoke-detector-variant-off::before {
@@ -21734,6 +22074,14 @@
 
 .mdi-spellcheck::before {
   content: "\F04C6";
+}
+
+.mdi-sphere::before {
+  content: "\F1954";
+}
+
+.mdi-sphere-off::before {
+  content: "\F1955";
 }
 
 .mdi-spider::before {
@@ -22142,6 +22490,14 @@
 
 .mdi-stomach::before {
   content: "\F1093";
+}
+
+.mdi-stool::before {
+  content: "\F195D";
+}
+
+.mdi-stool-outline::before {
+  content: "\F195E";
 }
 
 .mdi-stop::before {
@@ -22828,6 +23184,14 @@
   content: "\F1223";
 }
 
+.mdi-tag-search::before {
+  content: "\F1907";
+}
+
+.mdi-tag-search-outline::before {
+  content: "\F1908";
+}
+
 .mdi-tag-text::before {
   content: "\F1224";
 }
@@ -23172,6 +23536,10 @@
   content: "\F0515";
 }
 
+.mdi-thumbs-up-down-outline::before {
+  content: "\F1914";
+}
+
 .mdi-ticket::before {
   content: "\F0516";
 }
@@ -23300,6 +23668,14 @@
   content: "\F051D";
 }
 
+.mdi-timer-cog::before {
+  content: "\F1925";
+}
+
+.mdi-timer-cog-outline::before {
+  content: "\F1926";
+}
+
 .mdi-timer-off::before {
   content: "\F13AC";
 }
@@ -23322,6 +23698,14 @@
 
 .mdi-timer-sand-full::before {
   content: "\F078C";
+}
+
+.mdi-timer-settings::before {
+  content: "\F1923";
+}
+
+.mdi-timer-settings-outline::before {
+  content: "\F1924";
 }
 
 .mdi-timetable::before {
@@ -23690,6 +24074,14 @@
 
 .mdi-transmission-tower::before {
   content: "\F0D3E";
+}
+
+.mdi-transmission-tower-export::before {
+  content: "\F192C";
+}
+
+.mdi-transmission-tower-import::before {
+  content: "\F192D";
 }
 
 .mdi-trash-can::before {
@@ -24450,6 +24842,14 @@
 
 .mdi-view-dashboard::before {
   content: "\F056E";
+}
+
+.mdi-view-dashboard-edit::before {
+  content: "\F1947";
+}
+
+.mdi-view-dashboard-edit-outline::before {
+  content: "\F1948";
 }
 
 .mdi-view-dashboard-outline::before {
@@ -25605,7 +26005,7 @@
 }
 
 .mdi-blank::before {
-  content: "";
+  content: "\f68c";
   visibility: hidden;
 }
 
@@ -26988,7 +27388,7 @@ blockquote.blockquote .blockquote-footer {
   color: #27173E !important;
 }
 .link-listview > li a:after {
-  content: "";
+  content: "\f3d1";
   font-family: "Ionicons";
   font-size: 18px;
   position: absolute;
@@ -27058,7 +27458,7 @@ blockquote.blockquote .blockquote-footer {
   background: rgba(220, 220, 233, 0.3);
 }
 .image-listview > li a.item:after {
-  content: "";
+  content: "\f3d1";
   font-family: "Ionicons";
   font-size: 18px;
   position: absolute;
@@ -28971,7 +29371,7 @@ textarea, .form-control {
   background-position: center center;
   position: absolute;
   left: 50%;
-  top: calc(50% + -22px);
+  top: calc(50% - 22px);
   transform: translate(-50%, -50%);
 }
 .custom-file-upload label.file-uploaded label {
